<resources>
    <string name="app_name">apz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="userName">Name</string>
    <string name="password">Password</string>
    <string name="surname">Surname</string>
    <string name="washerId">Washer Id</string>
    <string name="modeId">Mode Id</string>
    <string name="powder">Powder</string>
    <string name="conditioner">Conditioner</string>
    <string name="washings">Washings</string>
    <string name="laundries">Laundries</string>
    <string name="profile">Profile</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="mode">Mode</string>
    <string name="status">Status</string>
    <string name="model">Model</string>
    <string name="programs">Programs</string>
    <string name="size">Size</string>
    <string name="create">Create</string>
    <string name="created">Created</string>
    <string name="info">Information</string>




</resources>