<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/washings"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_list"
        android:layout_marginTop="15dp"
        android:hint="@string/surname"
        android:padding="10dp"
        android:id="@+id/laundry"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_list"
        android:layout_marginTop="15dp"
        android:hint="@string/userName"
        android:padding="10dp"
        android:id="@+id/washer"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_list"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:id="@+id/mode"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_list"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:id="@+id/conditioner"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_list"
        android:layout_marginTop="15sp"
        android:text="@string/register"
        android:padding="10dp"
        android:id="@+id/create"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="15dp"
        android:id="@+id/login_user"/>

</LinearLayout>