<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_list"
        android:layout_marginTop="15dp"
        android:hint="@string/washerId"
        android:padding="10dp"
        android:id="@+id/washer"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_list"
        android:layout_marginTop="15dp"
        android:hint="@string/modeId"
        android:padding="10dp"
        android:id="@+id/mode"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_list"
        android:layout_marginTop="15dp"
        android:hint="@string/powder"
        android:padding="10dp"
        android:id="@+id/powder"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_list"
        android:layout_marginTop="15dp"
        android:hint="@string/conditioner"
        android:padding="10dp"
        android:id="@+id/conditioner"/>

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:background="@drawable/button_list"
        android:padding="10dp"
        android:text="@string/create" />

</LinearLayout>